<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/iv_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_behavior=".OverScrollBehavior">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentScrim="@color/white"
            app:expandedTitleTextAppearance="@style/expandedBarTextStyle"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/custom_app_bar_background"
                android:orientation="vertical"
                android:paddingHorizontal="24dp">

                <TextView
                    android:id="@+id/search_for_goods_main_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/dashboard_heading"
                    android:textColor="@color/white"
                    android:textSize="34sp">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/main_search_et"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:height="50dp"
                        android:background="@drawable/search_bar_background"
                        android:drawableEnd="@drawable/search_btn"
                        android:elevation="10dp"
                        android:hint="@string/search_bar_hint"
                        android:importantForAutofill="no"
                        android:paddingStart="20dp"
                        android:paddingEnd="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@android:color/darker_gray"
                        tools:ignore="RtlSymmetry,TextFields" />

                    <ImageView
                        android:id="@+id/qr_button"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="14dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_qr_code" />

                </LinearLayout>


            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:title="@string/dashboard_title"
                app:titleTextColor="@color/colorPrimary">


            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/top_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_anchor="@id/top_nested_scroll_view">

            <TextView
                android:id="@+id/special_sale_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="40dp"
                android:text="@string/SpecialSaleTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_special_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                app:layout_anchor="@id/special_sale_title" />

            <TextView
                android:id="@+id/best_price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="40dp"
                android:text="@string/best_price_title"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_best_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingTop="40dp"
                app:layout_anchor="@id/special_sale_title" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:elevation="20dp"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
